# SPDX-FileCopyrightText: 2022 Klarälvdalens Datakonsult AB, a KDAB Group company <info@kdab.com>
# SPDX-FileContributor: Be Wilson <be.wilson@kdab.com>
#
# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "cxx-qt-core-lib-headers"
version.workspace = true
authors = ["Andrew Hayzen <andrew.hayzen@kdab.com>", "Be Wilson <be.wilson@kdab.com>"]
edition.workspace = true
license.workspace = true
description = "A small crate for cxx-qt-core-lib and cxx-qt-build to share cxx-qt-core-lib's C++ headers"
repository.workspace = true

[features]
default = []
qt_gui = []
